Fix chat interface 'jumps'

--- a/app/chat/chat.css
+++ b/app/chat/chat.css
@@ -139,7 +139,6 @@
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	transform: translate(0, -25dvh);
 	width: 70%;
 	transform-origin: center bottom;
 	transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
